kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: crt-20521594-dev
spec:
  selector:
    app: fastapi-app
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
